--- a/app/src/main/res/layout-night/fragment_reset_password.xml
+++ b/app/src/main/res/layout-night/fragment_reset_password.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/textView2"
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -31,8 +32,7 @@
         app:trailingcircular_bigCircleRadius="40dp"
         app:trailingcircular_dotsColor="@color/colorPrimary"
         app:trailingcircular_dotsRadius="11dp"
-        app:trailingcircular_noOfTrailingDots="5"
-        android:visibility="gone"/>
+        app:trailingcircular_noOfTrailingDots="5" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/resetPasswordLayout"
@@ -82,7 +82,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etEmailResetPass"/>
+            app:layout_constraintTop_toBottomOf="@+id/etEmailResetPass" />
 
         <TextView
             android:id="@+id/tvBackToLogin"
