--- a/app/src/main/res/layout-night/activity_authentication.xml
+++ b/app/src/main/res/layout-night/activity_authentication.xml
@@ -45,9 +45,9 @@
         android:background="@color/errorColor"
         android:orientation="vertical"
         android:padding="8dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/flFragment"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        android:visibility="gone">
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
         <TextView
             android:id="@+id/tvNetworkStatus"
