--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,6 +9,9 @@
         android:title="@string/my_recipes"
         android:icon="@drawable/ic_my_recipes"/>
 
+    <item android:id="@+id/placeholder"
+        android:title=""/>
+
     <item android:id="@+id/profileFragment"
         android:title="@string/profile"
         android:icon="@drawable/ic_profile"/>
