--- a/app/src/main/res/layout-night/fragment_edit_profile.xml
+++ b/app/src/main/res/layout-night/fragment_edit_profile.xml
@@ -37,7 +37,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
@@ -48,12 +48,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp">
 
+            <com.github.abdularis.civ.AvatarImageView
+                android:id="@+id/ivChangeProfileImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_profile"
+                app:avatarBackgroundColor="@color/colorPrimary"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:text="A"
+                app:textSize="22sp" />
+
             <EditText
                 android:id="@+id/etEditName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/colorPrimaryText"
                 android:hint="@string/name"
@@ -63,7 +77,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/ivChangeProfileImage" />
 
             <Button
                 android:id="@+id/btnSubmit"
